packages/infra/identity/cdk.out/IdentityNetwork-dev.template.json
{
    "Description": "KitchenSink identity network boundary",
    "Resources": {
        "IdentityVpc6BEE40CD": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc"
                    }
                ]
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/Resource"
            }
        },
        "IdentityVpcpublicSubnet1SubnetE307395E": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": "10.0.0.0/24",
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "public"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/Subnet"
            }
        },
        "IdentityVpcpublicSubnet1RouteTableDF30015F": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/RouteTable"
            }
        },
        "IdentityVpcpublicSubnet1RouteTableAssociation7EF9F951": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcpublicSubnet1RouteTableDF30015F"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcpublicSubnet1SubnetE307395E"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/RouteTableAssociation"
            }
        },
        "IdentityVpcpublicSubnet1DefaultRoute0B0E56D7": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IdentityVpcIGW6B8F081F"
                },
                "RouteTableId": {
                    "Ref": "IdentityVpcpublicSubnet1RouteTableDF30015F"
                }
            },
            "DependsOn": ["IdentityVpcVPCGW57BE9651"],
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/DefaultRoute"
            }
        },
        "IdentityVpcpublicSubnet1EIP83EA7A23": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet1"
                    }
                ]
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/EIP"
            }
        },
        "IdentityVpcpublicSubnet1NATGatewayE5C0EA16": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": ["IdentityVpcpublicSubnet1EIP83EA7A23", "AllocationId"]
                },
                "SubnetId": {
                    "Ref": "IdentityVpcpublicSubnet1SubnetE307395E"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet1"
                    }
                ]
            },
            "DependsOn": [
                "IdentityVpcpublicSubnet1DefaultRoute0B0E56D7",
                "IdentityVpcpublicSubnet1RouteTableAssociation7EF9F951"
            ],
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet1/NATGateway"
            }
        },
        "IdentityVpcpublicSubnet2Subnet55FCB53A": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "public"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet2/Subnet"
            }
        },
        "IdentityVpcpublicSubnet2RouteTable0AC002AE": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/publicSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet2/RouteTable"
            }
        },
        "IdentityVpcpublicSubnet2RouteTableAssociation33FEFDC0": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcpublicSubnet2RouteTable0AC002AE"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcpublicSubnet2Subnet55FCB53A"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet2/RouteTableAssociation"
            }
        },
        "IdentityVpcpublicSubnet2DefaultRouteA042F28F": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IdentityVpcIGW6B8F081F"
                },
                "RouteTableId": {
                    "Ref": "IdentityVpcpublicSubnet2RouteTable0AC002AE"
                }
            },
            "DependsOn": ["IdentityVpcVPCGW57BE9651"],
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/publicSubnet2/DefaultRoute"
            }
        },
        "IdentityVpcprivateappSubnet1Subnet8449E9B4": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": "10.0.2.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "private-app"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1/Subnet"
            }
        },
        "IdentityVpcprivateappSubnet1RouteTable58ED1DE6": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1/RouteTable"
            }
        },
        "IdentityVpcprivateappSubnet1RouteTableAssociation019B199E": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcprivateappSubnet1RouteTable58ED1DE6"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcprivateappSubnet1Subnet8449E9B4"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1/RouteTableAssociation"
            }
        },
        "IdentityVpcprivateappSubnet1DefaultRoute13B299AD": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "IdentityVpcpublicSubnet1NATGatewayE5C0EA16"
                },
                "RouteTableId": {
                    "Ref": "IdentityVpcprivateappSubnet1RouteTable58ED1DE6"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet1/DefaultRoute"
            }
        },
        "IdentityVpcprivateappSubnet2SubnetBF90CB68": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "CidrBlock": "10.0.3.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "private-app"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2/Subnet"
            }
        },
        "IdentityVpcprivateappSubnet2RouteTable1121B8BB": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2/RouteTable"
            }
        },
        "IdentityVpcprivateappSubnet2RouteTableAssociation73783A02": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcprivateappSubnet2RouteTable1121B8BB"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcprivateappSubnet2SubnetBF90CB68"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2/RouteTableAssociation"
            }
        },
        "IdentityVpcprivateappSubnet2DefaultRoute32E561D3": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "IdentityVpcpublicSubnet1NATGatewayE5C0EA16"
                },
                "RouteTableId": {
                    "Ref": "IdentityVpcprivateappSubnet2RouteTable1121B8BB"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-appSubnet2/DefaultRoute"
            }
        },
        "IdentityVpcprivatedataSubnet1SubnetA9B9AC4C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": "10.0.4.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "private-data"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Isolated"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet1/Subnet"
            }
        },
        "IdentityVpcprivatedataSubnet1RouteTableED49178C": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet1/RouteTable"
            }
        },
        "IdentityVpcprivatedataSubnet1RouteTableAssociationF6F8E0A9": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcprivatedataSubnet1RouteTableED49178C"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcprivatedataSubnet1SubnetA9B9AC4C"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet1/RouteTableAssociation"
            }
        },
        "IdentityVpcprivatedataSubnet2Subnet34574B49": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "CidrBlock": "10.0.5.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "private-data"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Isolated"
                    },
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet2/Subnet"
            }
        },
        "IdentityVpcprivatedataSubnet2RouteTableE741E3AD": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet2"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet2/RouteTable"
            }
        },
        "IdentityVpcprivatedataSubnet2RouteTableAssociation20AB9ECD": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "IdentityVpcprivatedataSubnet2RouteTableE741E3AD"
                },
                "SubnetId": {
                    "Ref": "IdentityVpcprivatedataSubnet2Subnet34574B49"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/private-dataSubnet2/RouteTableAssociation"
            }
        },
        "IdentityVpcIGW6B8F081F": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IdentityNetwork-dev/IdentityVpc"
                    }
                ]
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/IGW"
            }
        },
        "IdentityVpcVPCGW57BE9651": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "IdentityVpcIGW6B8F081F"
                },
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/IdentityVpc/VPCGW"
            }
        },
        "AlbSecurityGroup86A59E99": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Ingress boundary for identity ALB",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Allow all outbound traffic by default",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Public HTTP ingress",
                        "FromPort": 80,
                        "IpProtocol": "tcp",
                        "ToPort": 80
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Public HTTPS ingress",
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "ToPort": 443
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/AlbSecurityGroup/Resource"
            }
        },
        "ServiceSecurityGroup61DE1A49": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "ECS tasks for identity service",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Controlled egress for Auth0 Management API and AWS endpoints",
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "ToPort": 443
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/ServiceSecurityGroup/Resource"
            }
        },
        "ServiceSecurityGroupfromIdentityNetworkdevAlbSecurityGroup0B81901D30005CA9EAEB": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "Description": "Allow ALB to reach identity ECS tasks",
                "FromPort": 3000,
                "GroupId": {
                    "Fn::GetAtt": ["ServiceSecurityGroup61DE1A49", "GroupId"]
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": ["AlbSecurityGroup86A59E99", "GroupId"]
                },
                "ToPort": 3000
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/ServiceSecurityGroup/from IdentityNetworkdevAlbSecurityGroup0B81901D:3000"
            }
        },
        "LambdaSecurityGroup0BD9FC99": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Lambda functions in webhooks boundary",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Controlled egress for Auth0 Management API and AWS endpoints",
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "ToPort": 443
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/LambdaSecurityGroup/Resource"
            }
        },
        "DatabaseSecurityGroup7319C0F6": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "RDS PostgreSQL ingress boundary",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Allow all outbound traffic by default",
                        "IpProtocol": "-1"
                    }
                ],
                "VpcId": {
                    "Ref": "IdentityVpc6BEE40CD"
                }
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/DatabaseSecurityGroup/Resource"
            }
        },
        "DatabaseSecurityGroupfromIdentityNetworkdevServiceSecurityGroup4284DF70543224837BBD": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "Description": "Allow identity ECS tasks to reach PostgreSQL",
                "FromPort": 5432,
                "GroupId": {
                    "Fn::GetAtt": ["DatabaseSecurityGroup7319C0F6", "GroupId"]
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": ["ServiceSecurityGroup61DE1A49", "GroupId"]
                },
                "ToPort": 5432
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/DatabaseSecurityGroup/from IdentityNetworkdevServiceSecurityGroup4284DF70:5432"
            }
        },
        "DatabaseSecurityGroupfromIdentityNetworkdevLambdaSecurityGroup195256C25432878EF817": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "Description": "Allow webhook lambdas to reach PostgreSQL",
                "FromPort": 5432,
                "GroupId": {
                    "Fn::GetAtt": ["DatabaseSecurityGroup7319C0F6", "GroupId"]
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Fn::GetAtt": ["LambdaSecurityGroup0BD9FC99", "GroupId"]
                },
                "ToPort": 5432
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/DatabaseSecurityGroup/from IdentityNetworkdevLambdaSecurityGroup195256C2:5432"
            }
        },
        "CDKMetadata": {
            "Type": "AWS::CDK::Metadata",
            "Properties": {
                "Analytics": "v2:deflate64:H4sIAAAAAAAA/32QwWrDQAxEv6X39bY16QeEUIIvrbFLrkVW1FaJozUrKSaE/HtxUuJbTzN6DGKYMpYvi/j0AKMWuN0XPXfx3BrgPsCon4RlPG8GDKsv2dSrUHvXM7beCdnEZtckN/qArqeZz2ypmpDBOMk9PJnXqp7kDWwNRiOcQp35CEbz40qMstA9cGvydy3NAH8OJBZaQs9sp3VOPlw7/Asq+c6kegkNafKM1zrvboPbJUjaUtzp47FcxOdpnp0yF9nF+ECxuekvlqZy5DsBAAA="
            },
            "Metadata": {
                "aws:cdk:path": "IdentityNetwork-dev/CDKMetadata/Default"
            }
        }
    },
    "Outputs": {
        "IdentityVpcId": {
            "Value": {
                "Ref": "IdentityVpc6BEE40CD"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityVpcId"
            }
        },
        "IdentityPrivateAppSubnetIds": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        {
                            "Ref": "IdentityVpcprivateappSubnet1Subnet8449E9B4"
                        },
                        ",",
                        {
                            "Ref": "IdentityVpcprivateappSubnet2SubnetBF90CB68"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityPrivateAppSubnetIds"
            }
        },
        "IdentityPrivateDataSubnetIds": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        {
                            "Ref": "IdentityVpcprivatedataSubnet1SubnetA9B9AC4C"
                        },
                        ",",
                        {
                            "Ref": "IdentityVpcprivatedataSubnet2Subnet34574B49"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityPrivateDataSubnetIds"
            }
        },
        "IdentityAlbSecurityGroupId": {
            "Value": {
                "Fn::GetAtt": ["AlbSecurityGroup86A59E99", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityAlbSecurityGroupId"
            }
        },
        "IdentityServiceSecurityGroupId": {
            "Value": {
                "Fn::GetAtt": ["ServiceSecurityGroup61DE1A49", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityServiceSecurityGroupId"
            }
        },
        "IdentityDatabaseSecurityGroupId": {
            "Value": {
                "Fn::GetAtt": ["DatabaseSecurityGroup7319C0F6", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityDatabaseSecurityGroupId"
            }
        },
        "IdentityLambdaSecurityGroupId": {
            "Value": {
                "Fn::GetAtt": ["LambdaSecurityGroup0BD9FC99", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:IdentityLambdaSecurityGroupId"
            }
        },
        "ExportsOutputRefIdentityVpcprivatedataSubnet1SubnetA9B9AC4CE2EEBEC2": {
            "Value": {
                "Ref": "IdentityVpcprivatedataSubnet1SubnetA9B9AC4C"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcprivatedataSubnet1SubnetA9B9AC4CE2EEBEC2"
            }
        },
        "ExportsOutputRefIdentityVpcprivatedataSubnet2Subnet34574B4916A0447C": {
            "Value": {
                "Ref": "IdentityVpcprivatedataSubnet2Subnet34574B49"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcprivatedataSubnet2Subnet34574B4916A0447C"
            }
        },
        "ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827": {
            "Value": {
                "Fn::GetAtt": ["DatabaseSecurityGroup7319C0F6", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827"
            }
        },
        "ExportsOutputRefIdentityVpcprivateappSubnet1Subnet8449E9B44E6A9D68": {
            "Value": {
                "Ref": "IdentityVpcprivateappSubnet1Subnet8449E9B4"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcprivateappSubnet1Subnet8449E9B44E6A9D68"
            }
        },
        "ExportsOutputRefIdentityVpcprivateappSubnet2SubnetBF90CB680A7DAA9E": {
            "Value": {
                "Ref": "IdentityVpcprivateappSubnet2SubnetBF90CB68"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcprivateappSubnet2SubnetBF90CB680A7DAA9E"
            }
        },
        "ExportsOutputFnGetAttServiceSecurityGroup61DE1A49GroupIdF955CEC9": {
            "Value": {
                "Fn::GetAtt": ["ServiceSecurityGroup61DE1A49", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputFnGetAttServiceSecurityGroup61DE1A49GroupIdF955CEC9"
            }
        },
        "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
            "Value": {
                "Fn::GetAtt": ["AlbSecurityGroup86A59E99", "GroupId"]
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
            }
        },
        "ExportsOutputRefIdentityVpcpublicSubnet1SubnetE307395E5AE106C7": {
            "Value": {
                "Ref": "IdentityVpcpublicSubnet1SubnetE307395E"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcpublicSubnet1SubnetE307395E5AE106C7"
            }
        },
        "ExportsOutputRefIdentityVpcpublicSubnet2Subnet55FCB53A8284CA10": {
            "Value": {
                "Ref": "IdentityVpcpublicSubnet2Subnet55FCB53A"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpcpublicSubnet2Subnet55FCB53A8284CA10"
            }
        },
        "ExportsOutputRefIdentityVpc6BEE40CDDBC7D89D": {
            "Value": {
                "Ref": "IdentityVpc6BEE40CD"
            },
            "Export": {
                "Name": "kitchensink-identity-network-dev:ExportsOutputRefIdentityVpc6BEE40CDDBC7D89D"
            }
        }
    },
    "Parameters": {
        "BootstrapVersion": {
            "Type": "AWS::SSM::Parameter::Value<String>",
            "Default": "/cdk-bootstrap/hnb659fds/version",
            "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
        }
    },
    "Rules": {
        "CheckBootstrapVersion": {
            "Assertions": [
                {
                    "Assert": {
                        "Fn::Not": [
                            {
                                "Fn::Contains": [
                                    ["1", "2", "3", "4", "5"],
                                    {
                                        "Ref": "BootstrapVersion"
                                    }
                                ]
                            }
                        ]
                    },
                    "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
                }
            ]
        }
    }
}
